# OC_P8_MLOps_part_2

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  gradio_app.py  main.py  pyproject.toml  pytest.ini  rugby_local.db
.github/workflows/: docker-push.yml
app/: __init__.py  main.py
app/api/routes/: health.py  predictions.py
app/config/: settings.py
app/db/: crud.py  database.py  init_db.py  models.py
app/middleware/: __init__.py  profiling.py
app/ml/: model_manager.py
app/models/: schemas.py
app/security/: auth.py
app/services/: __init__.py  prediction_service.py
app/utils/: logger.py
scripts/: batch_prediction.py  evaluate_drift.py
tests/: conftest.py  test_health.py
tests/api/routes/: __init__.py  test_health.py  test_predictions.py
tests/db/: test_crud.py  test_database.py
tests/middleware/: test_profiling.py
tests/ml/: test_model_manager.py
tests/services/: test_prediction_service.py
