[project]
name = "oc-p8-rugby-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "coverage>=7.12.0",
    "fastapi>=0.123.4",
    "fastapi-cli>=0.0.4",
    "flake8>=7.3.0",
    "huggingface-hub>=0.16.0",
    "isort>=7.0.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "psycopg>=3.3.1",
    "psycopg-binary>=3.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "pytest>=9.0.1",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.27.0",
]
