[project]
name = "oc-p8-rugby-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.4",
    "gradio>=5.23.1",
    "huggingface-hub>=0.16.0",
    "httpx>=0.28.1",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "psycopg>=3.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "requests>=2.31.0",
    "scikit-learn==1.7.2",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "gradio-client>=1.8.0",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "evidently>=0.7.17",
    "sniffio>=1.3.1",
    "snakeviz>=2.2.2",
    "onnxruntime>=1.23.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "fastapi-cli>=0.0.4",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
]
